docs: restructure benchmark report into final form
Executive summary and current-state tables up front (headline results,
API additions, known limits, methodology, repro instructions); the
round-by-round chronology moves to an appendix. Adds links to the two
upstream issues filed (#4967, #4991). Content unchanged — same numbers,
same conclusions — reorganized so the upstream sync-back PR can cite it
directly.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>